# SDLOL

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile.sh  util.sh
cmake/: FindSDL2_image.cmake
include/: CMakeLists.txt  colors.h  font.h  input.h  renderer.h  sdl-controller.h  sdlol-exception.h  surface.h  texture.h  window.h
include/sdlol/: event-handler.h  exception.h  font.h  label.h  renderer.h  sdl-controller.h  sdl-guard.h  sprite.h  surface.h  texture.h  timer.h  utils.h  window.h
src/: CMakeLists.txt  font.cpp  label.cpp  renderer.cpp  sdl-controller.cpp  sprite.cpp  surface.cpp  texture.cpp  timer.cpp  window.cpp
src/utilities/: logging.h  sdl-helpers.h
test/: CMakeLists.txt  constants.h  test-font.cpp  test-label.cpp  test-renderer.cpp  test-surface.cpp  test-texture.cpp  test-timer.cpp  test-window.cpp
